# SQLBucks

./: Dockerfile  README.md  docker-compose.yml  pom.xml  pyproject.toml  requirements.txt
python_legacy/: alembic.ini
python_legacy/src/: app.py  customer.py  populate_db.py
src/: admin.py  database.py  models.py
src/alembic/: env.py
src/alembic/versions/: 55b29b2f5224_add_initial_tables.py
src/main/java/com/sqlbucks/SQLBucks/: SqlBucksApplication.java
src/main/java/com/sqlbucks/SQLBucks/config/: SecurityConfig.java
src/main/java/com/sqlbucks/SQLBucks/controller/: CustomerController.java
src/main/java/com/sqlbucks/SQLBucks/controller/dto/: RegistrationRequest.java
src/main/java/com/sqlbucks/SQLBucks/domain/: Customer.java  CustomerBalance.java  Transaction.java  User.java
src/main/java/com/sqlbucks/SQLBucks/dto/: CustomerDTO.java
src/main/java/com/sqlbucks/SQLBucks/repository/: CustomerBalanceRepository.java  CustomerRepository.java  TransactionRepository.java  UserRepository.java
src/main/java/com/sqlbucks/SQLBucks/service/: CustomerService.java
src/main/resources/: application.properties
src/test/java/com/sqlbucks/SQLBucks/: SqlBucksApplicationTests.java
